--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         </header>
         <br>
         <main>
-           <h2>Introduction</h2>
-           <p>Spruced Vanilla is a free-to-play data-pack-pack that adds an insane number of features, and is completely free to play! Many developers have combined their work into this project! <span>This is our unofficial wiki made by a fan. You can access our Technical Wiki here!</span></p>
+           <p><span class="spantwo">Spruced Vanilla</span> is a free-to-play data-pack-pack that adds an insane number of features, and is completely free to play! Many developers have combined their work into this project! <span>This is our unofficial wiki made by a fan. You can access Spruce Vanilla's Technical Wiki here!</span></p>
            <section>
                 <table>
                     <tr>
@@ -28,15 +27,11 @@
                     </tr>
                     <tr>
                         <td><a href="biomes.html" target="_self">[🌳] Biomes</a></td>
-                        <td><a href="#" target="_self">Test</a></td>
+                        <td><a href="mobs.html" target="_self">[😸] Mobs</a></td>
                     </tr>
                     <tr>
-                        <td><a href="#" target="_self">Test</a></td>
-                        <td><a href="#" target="_self">Test</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="#" target="_self">Test</a></td>
-                        <td><a href="#" target="_self">Test</a></td>
+                        <td><a href="structures.html" target="_self">[🏢] Structures</a></td>
+                        <td><a href="dimensions.html" target="_self">[🚀] Dimensions</a></td>
                     </tr>
                 </table>
            </section>
