--- a/index.html
+++ b/index.html
@@ -16,9 +16,24 @@
             <img src="assets/SV logo.png" alt="SV Logo">
             <h1>Spruced Vanilla Wiki</h1>
         </header>
-        <br>
+        <hr>
         <main>
-           <p><span class="spantwo">Spruced Vanilla</span> is a free-to-play data-pack-pack that adds an insane number of features, and is completely free to play! Many developers have combined their work into this project! <span>This is our unofficial wiki made by a fan. You can access Spruce Vanilla's Technical Wiki here!</span></p>
+           <p><span class="spantwo">Spruced Vanilla</span> is a free-to-play data-pack-pack that adds an insane number of features, and is completely free to play! Many developers have combined their work into this project! <span>This is our unofficial wiki made by a fan. You can access Spruced Vanilla's Technical Wiki here!</span></p>
+           <nav>
+            <h2>Navigation</h2>
+            <br>
+            <br>
+            <br>
+            <ol>
+                <a href="index.html" target="_self"><li>Home</li></a>
+                <br>
+                <a href="https://discord.gg/zvnGZ9HYPY" target="_blank"><li>Credits</li></a>
+                <br>
+                <a href="https://modrinth.com/datapack/spruced-vanilla" target="_self"><li>Download</li></a>
+                <br>
+                <a href="#" target="_self"><li>License</li></a>
+            </ol>
+           </nav>
            <section>
                 <table>
                     <tr>
@@ -34,6 +49,12 @@
                         <td><a href="dimensions.html" target="_self">[🚀] Dimensions</a></td>
                     </tr>
                 </table>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p>Come check out the official Spruced Vanilla's Discord Server Here:</p>
+                <p class="dslink">https://discord.gg/kXtJfNyr44</p>
            </section>
         </main>
 
